--- a/NPHSApp/Base.lproj/Main.storyboard
+++ b/NPHSApp/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A361p" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="v94-sC-YXG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A379b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="v94-sC-YXG">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
@@ -55,12 +56,40 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="363" y="-839"/>
+            <point key="canvasLocation" x="3610.5" y="-839.5"/>
+        </scene>
+        <!--Subscriptions-->
+        <scene sceneID="tLl-ng-CNf">
+            <objects>
+                <tableViewController id="18A-in-xOD" customClass="SubscriptionsTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="TJZ-iW-CiX">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Clubs" id="Y7x-An-Dpe">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Y7x-An-Dpe" id="UcX-8R-8g0">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="18A-in-xOD" id="QAE-dj-cZh"/>
+                            <outlet property="delegate" destination="18A-in-xOD" id="AGU-MZ-hKO"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Subscriptions" id="0v1-3Z-iBm"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L6p-dg-dqE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="897" y="-690"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ljz-Qn-Oy3">
             <objects>
                 <tabBarController id="v94-sC-YXG" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="J8v-1g-d0d"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="guS-fc-P9I">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
@@ -70,11 +99,12 @@
                     <connections>
                         <segue destination="IKt-x0-RkK" kind="relationship" relationship="viewControllers" id="bTO-Cx-Aeb"/>
                         <segue destination="nIW-9t-13j" kind="relationship" relationship="viewControllers" id="Scu-aO-WpT"/>
+                        <segue destination="svy-lo-Kp4" kind="relationship" relationship="viewControllers" id="nU1-Ad-qbX"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UfY-QV-kfA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-977" y="-807"/>
+            <point key="canvasLocation" x="2271" y="-807"/>
         </scene>
         <!--Log In-->
         <scene sceneID="xvs-cz-SqD">
@@ -146,7 +176,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ifg-rz-H9q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-172" y="-844"/>
+            <point key="canvasLocation" x="3076" y="-844"/>
         </scene>
         <!--Notification-->
         <scene sceneID="nMV-Q2-z9O">
@@ -203,7 +233,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gQF-1E-Cp3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="400.5" y="-90.5"/>
+            <point key="canvasLocation" x="1212.5" y="-90.5"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="8A8-oB-Eu2">
@@ -302,6 +332,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QMJ-kb-msw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-823" y="-116"/>
+        </scene>
+        <!--Subscriptions-->
+        <scene sceneID="RXq-sB-JZq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="svy-lo-Kp4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Subscriptions" id="lPE-5u-KsT"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xKU-PH-CJY">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="18A-in-xOD" kind="relationship" relationship="rootViewController" id="REP-im-nEr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uEH-YZ-bg8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1519" y="-839"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
